v2.60.0 release - new: added language flag icons - new: editable list of languages / custom favorites per vendor in language-select option (Cmd or Ctrl/Alt + Click) - new: serving previously saved translations offline from history (options must be enabled and source-lang cannot be "auto") - fix: provide human-readable error messages for some google-translate api breaks (400, 429 errors) - fix: get translation from another vendor in case or error by hotkey or arrow-icon (when enabled in the settings)

--- a/src/components/select-language/select-language.scss
+++ b/src/components/select-language/select-language.scss
@@ -13,6 +13,7 @@
     }
 
     [class*="-control"] {
+      border: 1px solid currentColor;
       min-height: 32px;
       box-shadow: none;
       background: none;
